cmake_minimum_required(VERSION 3.13)
project(rad_script)

set(CMAKE_CXX_STANDARD 14)

add_executable(rad_script
        src/main.rs
        target/debug/deps/rad_script-553dfa2b8715da57
        target/debug/deps/rad_script-553dfa2b8715da57.d
        target/debug/incremental/rad_script-30qeymrl73w7w/s-fj94s3bpyl-hfso13-l9txnuv7ttr7/1knvqafldlauao6r.o
        target/debug/incremental/rad_script-30qeymrl73w7w/s-fj94s3bpyl-hfso13-l9txnuv7ttr7/1xyo4r5351lh1a5n.o
        target/debug/incremental/rad_script-30qeymrl73w7w/s-fj94s3bpyl-hfso13-l9txnuv7ttr7/2g29cfx31rzb23dd.o
        target/debug/incremental/rad_script-30qeymrl73w7w/s-fj94s3bpyl-hfso13-l9txnuv7ttr7/4p7hen2294letwef.o
        target/debug/incremental/rad_script-30qeymrl73w7w/s-fj94s3bpyl-hfso13-l9txnuv7ttr7/4rlloqni7tqeiwtb.o
        target/debug/incremental/rad_script-30qeymrl73w7w/s-fj94s3bpyl-hfso13-l9txnuv7ttr7/dep-graph.bin
        target/debug/incremental/rad_script-30qeymrl73w7w/s-fj94s3bpyl-hfso13-l9txnuv7ttr7/j632mxzt3e4gi6m.o
        target/debug/incremental/rad_script-30qeymrl73w7w/s-fj94s3bpyl-hfso13-l9txnuv7ttr7/query-cache.bin
        target/debug/incremental/rad_script-30qeymrl73w7w/s-fj94s3bpyl-hfso13-l9txnuv7ttr7/work-products.bin
        target/debug/incremental/rad_script-30qeymrl73w7w/s-fj94s3bpyl-hfso13.lock
        target/debug/rad_script
        target/debug/rad_script.d
        Cargo.lock
        Cargo.toml)
