[package]
name = "rad_script"
version = "0.1.0"
authors = ["Luis Rubio <luisr@stampery.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor = "0.10.2"
serde = { version = "1.0.101", features = ["derive"] }
num_enum = "0.4.2"
